Ajout envoi mail + corrections diverses + ajout README.txt

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,14 @@ DB_HOST=localhost
 DB_USER=sebastien
 DB_PASS=temp1234
 DB_NAME=singadrdolnantes
+REPOSITORY=/home/user/mon_dossier/
+
+# Mails
+DSN=smtp://localhost
+FROM=toto@mail.com
+TO=toto@mail.com
+SUBJECT="Rapport activité"
 
 # For tests only
-#DATE_J = '20230531';
-#DATE_M = '202305';
+#DATE_J=20230531
+#DATE_M=202305
