Ajout envoi mail + corrections diverses + ajout README.txt

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,11 @@ DB_HOST=localhost
 DB_USER=sebastien
 DB_PASS=temp1234
 DB_NAME=singadrdolnantes
-REPOSITORY=/home/user/mon_dossier/
+REPOSITORY=/home/user/mon_dossier/data/
+ONLY_MAILS=true
 
 # Mails
-DSN=smtp://localhost
+DSN=smtp://127.0.0.1:1025
 FROM=toto@mail.com
 TO=toto@mail.com
 SUBJECT="Rapport activité"
