Ajout paramètre de neutralisation mails

--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,14 @@ DB_USER=sebastien
 DB_PASS=temp1234
 DB_NAME=singadrdolnantes
 REPOSITORY=/home/user/mon_dossier/data/
-ONLY_MAILS=true
+SEND_MAILS=true
 
 # Mails
 DSN=smtp://127.0.0.1:1025
 FROM=toto@mail.com
 TO=toto@mail.com
 SUBJECT="Rapport activité"
+ONLY_MAILS=false
 
 # For tests only
 #DATE_J=20230531
